WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145219
No LLInt Test Failure: jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint
https://bugs.webkit.org/show_bug.cgi?id=145219
Summary
No LLInt Test Failure: jsc-layout-tests.yaml/js/script-tests/object-literal-d...
Joseph Pecoraro
Reported
2015-05-20 12:29:51 PDT
Bots are seeing a JSC test failure.
https://build.webkit.org/builders/Apple%20Mavericks%2032-bit%20JSC%20%28BuildAndTest%29/builds/10187/steps/webkit-32bit-jsc-test/logs/stdio
FAIL: jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint Diff looks like:
> jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: DIFF FAILURE! > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: --- ../.tests/jsc-layout-tests.yaml/js/object-literal-duplicate-properties-expected.txt 2015-05-20 11:06:14.000000000 -0700 > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: +++ ../jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint.out 2015-05-20 11:19:37.000000000 -0700 > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: @@ -224,19 +224,19 @@ > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: PASS (function(){var __proto__ = null; o = {__proto__:null, __proto__}})() did not throw exception. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: PASS ({__proto__:[], __proto__:{}}) threw exception SyntaxError: Attempted to redefine __proto__ property.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: PASS 'use strict';({__proto__:[], __proto__:{}}) threw exception SyntaxError: Attempted to redefine __proto__ property.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: -PASS (function(){({__proto__:[], __proto__:{}})})() threw exception SyntaxError: Attempted to redefine __proto__ property.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: +PASS (function(){({__proto__:[], __proto__:{}})})() threw exception RangeError: Maximum call stack size exceeded.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: PASS o = {__proto__:null, '__proto__':{}} threw exception SyntaxError: Attempted to redefine __proto__ property.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: PASS 'use strict';o = {__proto__:null, '__proto__':{}} threw exception SyntaxError: Attempted to redefine __proto__ property.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: -PASS (function(){o = {__proto__:null, '__proto__':{}}})() threw exception SyntaxError: Attempted to redefine __proto__ property.. > jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint: +PASS (function(){o = {__proto__:null, '__proto__':{}}})() threw exception RangeError: Maximum call stack size exceeded.. > ...
Note the different exception message.
Attachments
[PATCH] Proposed Fix
(1.49 KB, patch)
2015-05-20 12:31 PDT
,
Joseph Pecoraro
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-05-20 12:31:16 PDT
Created
attachment 253457
[details]
[PATCH] Proposed Fix
Mark Lam
Comment 2
2015-05-20 12:32:27 PDT
Comment on
attachment 253457
[details]
[PATCH] Proposed Fix r=me
Joseph Pecoraro
Comment 3
2015-05-20 12:35:55 PDT
http://trac.webkit.org/changeset/184647
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug