No LLInt Test Failure: jsc-layout-tests.yaml/js/script-tests/object-literal-duplicate-properties.js.layout-no-llint https://bugs.webkit.org/show_bug.cgi?id=145219

Reviewed by Mark Lam.

* jit/JITOperations.cpp:
Throw the error we just got, instead of a stack overflow exception.
This matches other error handling for callers of prepareForExecution.

Canonical link: https://commits.webkit.org/163226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184647 268f45cc-cd09-0410-ab3c-d52691b4dbfc